<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>umrt_com_antenna</name>
  <version>0.1.0</version>
  <description>GPIO switch and HMC5883L IMU/magnetometer peripheral nodes for the comms antenna Raspberry Pi.</description>
  <maintainer email="exec.umrt@gmail.ca">UMRT Comm-Ops</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Installed via apt, not a colcon/ament package, but declared so rosdep can pull it in -->
  <exec_depend>libgpiod-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>